# controller

./: .CMakeLists.txt.un~  .CMakeLists.txt~.swp  .gitignore  .package.xml.un~  CMakeLists.txt  CMakeLists.txt~  CMakeLists.txt~~  MotionControllerBack.tar  README.md  controller_setup.bash  package.xml  package.xml~
FakeController/fake_controller/: CMakeLists.txt
FakeController/fake_controller/include/fake_controller/: FakeController.hpp  constants.hpp  df_ros_topic.hpp
FakeController/fake_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
FakeController/fake_controller/install/fake_controller/lib/fake_controller/: fake_controller_node
FakeController/fake_controller/install/fake_controller/share/fake_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
FakeController/fake_controller/log/: latest_build
FakeController/fake_controller/src/: FakeController.cpp  constants.cpp  main.cpp
MotionController/MotionController/: CMakeLists.txt  package.xml
MotionController/can_manager/: CMakeLists.txt  package.xml
MotionController/can_manager/include/can/: can2ad_dbc.h  can2vcu_dbc.h  can_adaptor.hpp  can_define.hpp  can_manager.hpp  data_relayer.hpp
MotionController/can_manager/include/can_manager/: constants.hpp  debug.hpp
MotionController/can_manager/include/code/: kec_code_defie.hpp
MotionController/can_manager/src/: main.cpp
MotionController/can_manager/src/can/: can_adaptor.cpp  can_dump.cpp  can_manager.cpp  data_relayer.cpp
MotionController/can_msgs/: CMakeLists.txt
MotionController/can_msgs/msg/: AdControlAccelerate.msg  AdControlBody.msg  AdControlBrake.msg  AdControlSteering.msg  Bms.msg  DbsStatusTwo.msg  Emergency.msg  Init.msg  Mode.msg  TorqueFeedback.msg  VcuMcuRequest.msg  VcuVehicleOdometerStatus.msg
MotionController/dummy/ad_control_publisher_cpp/: CMakeLists.txt  package.xml
MotionController/dummy/ad_control_publisher_cpp/src/: main.cpp
MotionController/dummy/ad_steering_publisher/: CMakeLists.txt  package.xml
MotionController/dummy/ad_steering_publisher/src/: steering_control_node.cpp
MotionController/dummy/brake_control_node/: CMakeLists.txt  package.xml
MotionController/dummy/brake_control_node/src/: brake_control_node.cpp
MotionController/wm_motion_controller/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
MotionController/wm_motion_controller/include/can/: can2vcu_dbc.h  can_adaptor.hpp  can_define.hpp  can_dump.hpp  can_manager.hpp  data_relayer.hpp  lib.hpp
MotionController/wm_motion_controller/include/colleague/: i_motion_colleague.hpp
MotionController/wm_motion_controller/include/common/: common.hpp  test.h
MotionController/wm_motion_controller/include/converter/: df_ugv_converter.hpp  ugv_converter.hpp
MotionController/wm_motion_controller/include/entity/: df_ugv.hpp
MotionController/wm_motion_controller/include/manager/: i_can.hpp  manager.hpp  motion.hpp
MotionController/wm_motion_controller/include/wm_motion_controller/: df_motion_controller.hpp  wm_motion_controller.hpp  wm_motion_controller_constants.hpp
MotionController/wm_motion_controller/launch/: motion_controller_launch.py
MotionController/wm_motion_controller/src/: main.cpp
MotionController/wm_motion_controller/src/can/: can_adaptor.cpp  can_dump.cpp  can_manager.cpp  can_send.cpp  data_relayer.cpp
MotionController/wm_motion_controller/src/converter/: ugv_converter.cpp
MotionController/wm_motion_controller/src/entity/: ugv.cpp
MotionController/wm_motion_controller/src/manager/: manager.cpp
MotionController/wm_motion_controller/src/mediator/: concrete_motion_mediator.cpp
MotionController/wm_motion_controller/src/wm_motion_controller/: wm_motion_controller.cpp  wm_motion_controller_constants.cpp
can_led_keyboard/: CMakeLists.txt
can_led_keyboard/src/: can_led_keyboard.cpp
odom_listener/: CMakeLists.txt
odom_listener/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
odom_listener/install/odom_listener/lib/odom_listener/: odom_listener_node
odom_listener/install/odom_listener/share/odom_listener/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
odom_listener/install/odom_listener/share/odom_listener/cmake/: odom_listenerConfig-version.cmake  odom_listenerConfig.cmake
odom_listener/install/odom_listener/share/odom_listener/environment/: path.dsv  (+1 more)
odom_listener/log/: latest_build
odom_listener/src/: main.cpp
wm_motion_controller/: CMakeLists.txt  README.md  package.xml
wm_motion_controller/dev/: settings.json
wm_motion_controller/include/can/: can_adaptor.hpp  can_define.hpp  can_manager.hpp  data_relayer.hpp  i_can_connect.hpp  w1candbc.h
wm_motion_controller/include/colleague/: i_motion_colleague.hpp  motion_colleague.hpp
wm_motion_controller/include/converter/: df_ugv_converter.hpp  ugv_converter.hpp
wm_motion_controller/include/entity/: df_ugv.hpp  ugv.hpp
wm_motion_controller/include/mediator/: concrete_motion_mediator.hpp  i_motion_mediator.hpp
wm_motion_controller/include/object/: ugv.hpp
wm_motion_controller/include/quaternion/: quaternion.hpp
wm_motion_controller/include/wm_motion_controller/: df_motion_controller.hpp  wm_motion_controller.hpp  wm_motion_controller_constants.hpp
wm_motion_controller/launch/: motion_controller_launch.py
wm_motion_controller/log/: result-230427.txt  result.txt
wm_motion_controller/src/: main.cpp  wm_motion_controller.cpp
wm_motion_controller/src/can/: can_adaptor.cpp  can_dump.cpp  can_manager.cpp  data_relayer.cpp
wm_motion_controller/src/colleague/: motion_colleague.cpp
wm_motion_controller/src/converter/: ugv_converter.cpp
wm_motion_controller/src/entity/: ugv.cpp
wm_motion_controller/src/mediator/: concrete_motion_mediator.cpp
wm_motion_controller/src/wm_motion_controller/: .wm_motion_controller.cpp.swo  .wm_motion_controller.cpp.swp  wm_motion_controller.cpp  wm_motion_controller_constants.cpp
(+1440 files in other folders)
