<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>MotionController</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nuc-bs@todo.todo">nuc-bs</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>wm_motion_controller</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>can_led_keyboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
